[package]
name = "nodebridge"
version = "0.1.0"
authors = ["Hanjiang Yu <hanjiang.yu@bitmain.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.25.0" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.25.0" }
chrono = "0.4"
env_logger = "0.6"
failure = "0.1"
futures = "0.1"
jsonrpc-client-transports = "13.1"
jsonrpc-core = "13.1"
jsonrpc-core-client = "13.1"
log = "0.4"
mysql_async = "0.20"
rdkafka = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = "0.1"
